2007-05-21  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/list.py: Removed outdated comment.

	* pytis/form/dualform.py: Cosmetic improvement.

	* pytis/presentation/field.py: Don't invoke computers on
	initialization, when the passed 'row' is None and 'new' is False.
	Reinitialize also virtual columns on each `set_row' call.

	* pytis/presentation/_test.py: Updated.

	* pytis/form/form.py (PopupForm.run): Rollback only if transaction
	is defined.
	(EditForm._commit_form): Reset the row even if the data insert
	operation desn't return the inserted row.

2007-05-18  Milan Zamazal  <pdm@brailcom.org>

	* pytis/data/postgresql.py
	(PostgreSQLStandardBindingHandler._pdbb_create_sql_commands.make_lock_command.find_real_key):
	Return None if the information can't be retrieved.

2007-05-18  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/form.py (CheckRowsForm): New class.

	* pytis/form/inputfield.py: Use the config option for invalid
	field color.

	* pytis/util/configuration.py: New option `field_invalid_color'.

	* pytis/presentation/field.py: Don't invoke callbacks when the
	value is changed through validation.  Add a key column if it
	is not present in field specifications.

	* pytis/form/form.py: Form creation logging improved.

	* pytis/form/list.py: Fixed unwanted list position changes.

	* pytis/form/configui.py: Grouping improved.  Added controls for
	field colors.

2007-05-17  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/_grid.py: Don't create just another `PresentedRow'
	instance for the ListTable but share the form's instance.

	* pytis/data/types_.py (Binary.Buffer.load): Allow passing the
	original filename.

	* pytis/form/inputfield.py: Removed forgotten print.  Call
	`_on_change' also for text fields manually.  Pass the original
	filename of file data.

	* pytis/form/form.py: Use the new command handling mechanism.
	Always report the ShowForm unchanged.  Allow overriding the
	singleline argument for the created `PresentedRow' instance.